@@ -1,3 +1,7 @@
+* 2013-10-09 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 29166: Instruct client to move a folder "/.drive" to quarantine.  
+
 * 2013-10-08 - thorben.betten@open-xchange.com
 
  - Fix for bug 29136: Do not change session's IP address in case IP-check is turned off and non-white-listed client
